docs: rewrite LEARNING_PATH.md as a learner's guide, align README.md
LEARNING_PATH.md was drifting into a build/verification report (test
counts, infra decisions, session-specific disclosures) instead of
explaining how someone is actually supposed to work through the
course. Rewrote it around the learner: the daily rhythm, what changes
at each of the 5 stages, what tools you need and when, how to verify
your own work, and - reframed as a technique to practice rather than
a session disclosure - what to do when a day asks for credentials or
infrastructure you don't have (design behind an interface, write a
fake implementation, swap in the real one later).

Updated README.md in two places that had gone stale relative to this:
the 'no Maven needed' setup line now says that only holds through Day
53, and the test-coverage summary now reflects that every day from 54
through 100 has a real mvn test suite, not just 54-59.