@@ -1,11 +1,29 @@
-# Java Learning Path Structure
+# How to Learn With This Course
 
-## Overview
-This repository follows a structured 100-day learning path, organized into 5 difficulty levels.
+This is a guide to actually working through the 100 days — the daily rhythm, what's in a day's folder, what tools you'll need and when, how to check your own work, and what to do when a day asks for something you don't have. For the day-by-day topic list, see the main [README](README.md); this file is about *how* to move through it.
 
-## Directory Structure
+## The daily rhythm
 
-This is how the days are actually laid out. Not every folder appears in every day — see the notes below.
+Do this for every day, in order:
+
+1. **Read the whole day's `README.md` first**, including the "Notes & reference" section at the bottom, before writing any code. It's short by design — skimming it and jumping straight to code is the single most common way to get stuck on something the README already answered.
+2. **Attempt it yourself before checking a solution.** Where a day has `exercise1/`/`exercise2/`, start there — they're small and focused, and a wrong attempt on a 20-line exercise teaches you more than reading 20 correct lines someone else wrote.
+3. **Build the day's main project.** For Days 1–31 this starts from `_start/`; from Day 32 on, most days are project-only — you build directly from the brief, there's no scaffold to fill in.
+4. **Check your work against the tests where they exist** (see "Verifying your work" below) rather than eyeballing it against `_end/` or a sample output. A test tells you *exactly* what's wrong; comparing files by eye tells you they're different.
+5. **Commit at the end of the day**, even if it's incomplete. A daily commit is what makes the "100 days" framing real — you're building a visible trail of 100 days of actual work, not one commit at the end.
+6. **Move on.** Don't wait for perfection on a portfolio project before starting the next day; the point of Days 81–100 in particular is breadth across many small, complete systems, not polishing any single one indefinitely.
+
+## The five stages, and what changes at each one
+
+| Stage | Days | What's different |
+|---|---|---|
+| Beginner | 1–14 | Plain `.java` files, `javac`/`java` only. No extra tools. |
+| Intermediate | 15–31 | Same tooling, plus JavaFX for GUI days (18, 22–23, 27–31) — see the JavaFX note below before you hit Day 18. |
+| Intermediate+ | 32–58 | APIs, credentials, scraping, and automation days start appearing — see "When a day needs something you don't have," below. Spring Boot and Maven arrive at Day 54. |
+| Advanced | 59–80 | Everything is a self-contained Maven project from here on (own `pom.xml` per day) — plain `javac` no longer applies past Day 59. |
+| Professional | 81–100 | "Portfolio Projects": each day is a complete, real, working system on its own (a game, a web app, a small ML pipeline), not a guided exercise. Treat these as practice building something from a one-paragraph brief, the way a real assignment or side project actually starts. |
+
+## What's in a day's folder
 
 ```
 100-java-basics-advance/
@@ -30,95 +48,61 @@ This is how the days are actually laid out. Not every folder appears in every da
     └── README.md               # Portfolio project brief
 ```
 
-## What's in each folder
+- **`exercise1/`, `exercise2/`** (most days 1–40): small, focused practice on the day's concept. Starter code has `// TODO` comments; the README says what's expected.
+- **`_start/`, `_end/`** (Days 1–31 only): the day's main project. `_start` is where you begin; use `_end` only to check your own work, not as a template to copy from.
+- **From Day 32 on**, most days are project-only: read the `README.md` and build directly into the day's folder.
+- **From Day 54 on**, every day/exercise is its own Maven project (its own `pom.xml`) instead of loose `.java` files, because that's what those days are teaching (Spring Boot, JPA, etc.).
 
-- **`exercise1/`, `exercise2/`** (most days): small, focused practice on the day's concept. Starter code has `// TODO` comments; the README says what's expected.
-- **`_start/`, `_end/`** (Days 1–31): the day's main project. `_start` is where you begin, `_end` is the finished version, to check your own work against.
-- **From Day 32 on**, most days are project-only: read the day's `README.md` and build directly, there's no separate `_start`/`_end` split.
-- **Day 54 has its own `pom.xml`** (a real Spring Boot/Maven project) rather than a `src/` of loose `.java` files, since that's what the day actually teaches. Days 55–59's exercises follow the same pattern, one `pom.xml` per exercise.
-- **Days 60–100 now all have full, tested projects** (see "Days 60–100 are now built out" below) — this closes what was previously the biggest gap in the repo.
+## Verifying your work
 
-Most of the repo compiles with plain `javac`, per the "How to Run Java Files" instructions in each day's README. Days 54–59 are the exception: they need Maven (see the root README's "How to Run Tests" for the exact commands), because that's what those days are teaching.
+Most early and late days ship with real JUnit tests you can run against your own solution, not just the bundled one — see the root README's **"How to Run Tests"** for the exact commands (plain JUnit for Days 1–17/24–26/exercises through Day 40; `mvn test` for every day from 54 onward). If a day has a test, get it green before moving on — that's a stronger signal than "it compiles" or "it looks right."
+
+**Skipped on purpose, not by oversight:** a handful of exercises ask you to demonstrate a concept (explain variable scope, spot the bug in given code, draw some shapes) rather than compute a value with one right answer, so there's nothing a test could assert. Day 12's exercises, Day 13's exercise1, and Day 18/27's exercise1 fall in this group — read the README's own checklist for those instead.
+
+## Setup you'll need, and when
+
+- **Days 1–53**: nothing beyond a JDK (11+, this repo is built/tested against 21) and `javac`/`java`.
+- **JavaFX (Days 18, 22–23, 27–31)**: JavaFX hasn't shipped with the JDK since Java 11, so you'll need to install it yourself — grab the [JavaFX SDK](https://gluonhq.com/products/javafx/) and run with `--module-path`/`--add-modules` pointed at it. If you'd rather learn the logic before wrestling with a GUI toolchain, Days 19–23 and 27–31 each have the real decision logic (collision detection, ball physics, timers, file formats) pulled out into a plain `*Logic.java` class next to the GUI file — no JavaFX needed to compile or test that part, and it's fully covered by JUnit tests you can run today.
+- **Maven (Day 54 onward)**: install [Apache Maven](https://maven.apache.org/download.cgi) (any recent 3.9.x). Every project from here on has its own `pom.xml` — run `mvn test` from that day's folder.
+- **Docker (Day 70)**: optional for that day specifically — you can read and understand the Dockerfile/compose setup, and verify the app itself with `mvn test`, without a working Docker daemon.
+
+## When a day needs something you don't have
+
+A handful of days (sending real email, calling a paid or OAuth-gated API, driving a real browser, taking a real payment) describe integrating with something you may not have credentials or infrastructure for yet. Don't let that block you — it's a real, common situation in professional work too, and the standard move is:
+
+1. **Design the integration behind an interface** (e.g. a `PaymentGateway` or `WhatsAppClient` interface) rather than calling the third-party SDK directly from your business logic.
+2. **Write a fake/simulated implementation of that interface** that behaves like the real thing closely enough to test against — this course's own Day 96 does exactly this for payments (a fake gateway that follows the same test-card convention real processors use, so both "approved" and "declined" are genuinely reachable, tested code paths) and Day 90 does it for text-to-speech (falling back to the OS's own built-in speech engine instead of a paid cloud TTS API).
+3. **Swap in the real SDK later**, once you have credentials, by writing a second implementation of the same interface — your business logic doesn't change.
+
+This is a genuinely useful pattern to practice, not just a workaround: it's exactly how you'd want to structure real code that depends on a service you can't hit from your test suite (rate limits, cost, flakiness, secrets management). A few specific days where you'll want it:
+- **Day 32** (email) — a real send needs a real SMTP account; swap in one once you have credentials.
+- **Days 33, 34, 36, 39, 45, 46** (weather/news/Spotify/OAuth APIs) — need live network calls and real API keys.
+- **Day 38** (databases) — needs a real database engine (or use an embedded one like H2 to get moving without installing a server).
+- **Days 43, 44** (web scraping) — need a real page to scrape; test your parsing logic against a saved local copy of the HTML so your tests don't depend on the live page staying unchanged.
+- **Days 47–53** (Selenium automation) — need a real browser plus a WebDriver. Modern Selenium (4.6+) auto-detects your installed Chrome and downloads a matching driver for you — no manual setup required, just add the dependency.
+- **Day 96** (payments), **Day 97** (WhatsApp) — see above; both include a working fake you can extend.
+
+## Known gaps worth knowing about upfront
+
+- **Days 41–42's briefs are HTML/CSS** (flexbox, grid, basic pages), but their stub files are `.java` — a content mismatch in the course materials, not something you're doing wrong. Treat these two days as an HTML/CSS detour and build plain `.html`/`.css` files instead of forcing the topic into Java.
+- **Days 60–100 are each a fully separate, real project** (own `pom.xml`, own tests) rather than exercises with a fixed right answer — if your approach to a portfolio-project day looks different from any reference you find, that's expected; judge it against the day's own checklist, not a diff.
+
+## Gotchas you'll actually hit
+
+If you're on a recent Spring Boot (4.x) for Days 54 onward, a few things moved from where older tutorials expect them:
+- `@AutoConfigureMockMvc` lives in a separate module, `spring-boot-webmvc-test` (package `org.springframework.boot.webmvc.test.autoconfigure`) — `spring-boot-starter-test` alone doesn't pull it in anymore.
+- Jackson's `ObjectMapper` resolves under Maven groupId `tools.jackson.core`, not the classic `com.fasterxml.jackson.core` — run `mvn dependency:tree | grep jackson` if an import doesn't resolve the way an older tutorial expects.
+- `@MockBean` is gone; use `@org.springframework.test.context.bean.override.mockito.MockitoBean` instead.
+
+A couple of database gotchas worth knowing before you hit a confusing SQL error with H2 (the embedded database used throughout Days 60+):
+- `USER`, `YEAR`, `RANK`, and `ORDER` are all reserved SQL keywords — naming an entity or column any of these produces a syntax error. Rename the column (`@Column(name = "app_user")`) or the table (`@Table(name = "customer_order")`) instead.
+
+And one modeling gotcha worth knowing if you're encoding categorical data (education level, region, etc.) as input to your own regression model, as Day 100 does: one-hot encode with one category *dropped* as the reference (rather than a column per category). Including every category creates perfect collinearity with the model's bias term — known as the "dummy variable trap" — and breaks the normal-equations math.
 
 ## Progress Tracking
-- [ ] Day 1-14: Beginner
-- [ ] Day 15-31: Intermediate
-- [ ] Day 32-58: Intermediate+
-- [ ] Day 59-80: Advanced
-- [ ] Day 81-100: Professional
 
-## Learning Approach
-1. Read the day's README.md
-2. Understand the concepts
-3. Complete exercises
-4. Build the project
-5. Commit your code
-6. Move to next day
-
-## Test coverage
-
-Tests exist for:
-- **Days 1–17 and 24–26's `_end/` solutions** (30 of 31 days in that range — Day 13's is a fixed literal demo with nothing to vary, so it has no test).
-- **The testable logic behind Days 19–23 and 27–31** (see the JavaFX note below).
-- **The `exercise1`/`exercise2` stubs for every day from 1 to 30, and Days 35, 37, and 40** — these were empty `// TODO` files, so each got a real reference implementation plus a test.
-- **Days 54–59** — real Spring Boot projects, JUnit and MockMvc against a running application context: a REST API (54, 55), static resources and Thymeleaf templates (56, 57), and Bootstrap-styled pages including pagination, alerts, badges and a delete-confirmation modal (58, 59).
-- **Days 60–100** — every day is its own self-contained Maven module (own `pom.xml`) with a real `mvn test` suite; see "Days 60–100 are now built out" below for what each day actually built and how it was verified.
-
-See the root README's "How to Run Tests" to run any of them.
-
-**Skipped on purpose, not by oversight:**
-- **Day 12's exercises, and Day 13's exercise1.** They ask you to demonstrate a language concept (variable scope, access modifiers, spotting errors in given code) rather than compute something with one right answer, so there's nothing a test could assert.
-- **Day 18's exercise1** (basic shapes) and **Day 27's exercise1** (basic GUI). Same reasoning: drawing shapes or laying out labels and buttons has no decision logic behind it to test.
-
-## Days 18–23 and 27–31 are JavaFX, which isn't installed here
-
-JavaFX hasn't been part of the JDK since Java 11, and it isn't set up in this repo, so the GUI classes themselves (`TurtleRace.java`, `PongGame.java`, and so on) can't be compiled or run yet. For Days 19–23 and 27–31, the actual game/UI logic (collision detection, ball physics, timers, password/flash-card file formats) has been pulled into a plain `*Logic.java` class next to each original file — no JavaFX needed, and it's fully tested. The original GUI file keeps its own copy of that logic inline; it hasn't been rewired to call the new class, since that edit can't be verified without JavaFX installed to compile it. Day 18 has no real decision logic to extract in the first place — it's just a grid of randomly colored dots.
-
-## Maven and Spring Boot are now set up (Days 54–59)
-
-Days 54–59 needed real infrastructure this repo didn't have, so it's now installed under `F:\Code\clients\tools`: Apache Maven 3.9.16 (checksum-verified against the official Apache download). Each of Days 54–59's projects is its own self-contained Maven project (its own `pom.xml`), targeting Spring Boot 4.1.1. Two non-obvious Spring Boot 4 changes worth knowing if you extend these:
-- `@AutoConfigureMockMvc` moved to a new module, `spring-boot-webmvc-test` (package `org.springframework.boot.webmvc.test.autoconfigure`) — `spring-boot-starter-test` alone no longer pulls it in.
-- Jackson's `ObjectMapper` now resolves under Maven groupId `tools.jackson.core`, not the classic `com.fasterxml.jackson.core` — check `mvn dependency:tree | grep jackson` before assuming the old import path.
-- `@MockBean` was replaced by `@org.springframework.test.context.bean.override.mockito.MockitoBean` (used in Day 59's exercise2, to isolate each test from the shared in-memory post list).
-
-## Days 60–100 are now built out
-
-Days 60–100 previously had README-only briefs with no code — this was the last and biggest gap in the repo. Each is now its own self-contained Maven module (own `pom.xml`, package `com.learning` for Spring Boot days and `com.portfolio` for the standalone "Portfolio Project" days from Day 81 on), built by reading that day's own brief, implementing exactly what it asks, writing real JUnit tests, and verifying with a real `mvn test` run before committing — never claiming a test suite passed without seeing the actual output. Days 60–100 all pass `mvn test`; commit messages document the verified test counts and any real bugs found along the way.
-
-**What each block of days covers:**
-- **60–69**: Spring Boot forms, file upload, CSV import/export, JPA/Hibernate CRUD, a Top-10-movies app, accessibility passes, a RESTful API with proper status codes and error handling, Spring Security (form login, BCrypt, CSRF), and a blog capstone with user/post relationships.
-- **70–77**: Docker/Postgres deployment config, plain-Java data analysis (CSV parsing, statistics, trend detection), JFreeChart visualization, aggregate/grouping operations, time-series analysis (moving average, linear regression), custom data structures (stack/queue/BST), and classic algorithms (sorting, searching, graph BFS/DFS/shortest-path).
-- **78–80**: dynamic programming and greedy algorithms (with a deliberate test showing greedy coin-change is *not* optimal for non-canonical denominations), a testing/QA day (Mockito unit tests + JaCoCo coverage), and a from-scratch linear regression house-price predictor (Gaussian elimination on the normal equations — no ML library needed).
-- **81–96 ("Portfolio Projects")**: a Morse code converter, a personal website, Tic Tac Toe and Breakout and Space Invaders (JavaFX GUIs, with all game logic split into a plain-Java class so it's unit-testable independent of the UI), an image watermark tool (BufferedImage/Graphics2D), a typing speed test, a PDF-to-audio converter, a color palette generator (real HSL math), a web scraper (Jsoup), Selenium-based game automation, an API integration dashboard (three real live keyless APIs), a Todo list app, a disappearing-text editor (java.time.Clock-driven, testable without real sleeps), a cafe finder (Leaflet/OpenStreetMap, no API key needed), and a full e-commerce flow with cart/checkout/order management.
-- **97–100**: a WhatsApp integration (a real webhook receiver implementing Meta's documented Cloud API contract, paired with a simulated send client), a Chart.js-backed data analysis dashboard with interactive filters and CSV/JSON export, an advanced analytics day layering real linear-regression forecasting and PDFBox-generated PDF reports on top of that same dataset, and the course's final capstone — a from-scratch multiple linear regression earnings predictor with proper one-hot categorical encoding (reference-category encoding, avoiding the dummy-variable trap) and a genuine seeded train/test split for honest evaluation metrics.
-
-**Infrastructure decisions worth knowing if you extend these:**
-- **JavaFX games (83, 86, 89, 94)** use `org.openjfx:javafx-controls` (classifier `win`) plus the `org.openjfx:javafx-maven-plugin` (`mvn javafx:run`) — there's no JDK-bundled JavaFX, and this setup downloads a real, matching JavaFX runtime rather than assuming one is installed.
-- **Selenium (93)** uses Selenium 4.6+'s built-in Selenium Manager, which auto-detects the installed Chrome version and downloads a matching chromedriver — no manual WebDriver setup needed, and this was verified by actually launching real headless Chrome, not mocked.
-- **Payment (96)** uses a `PaymentGateway` interface with a `SimulatedPaymentGateway` implementation instead of real Stripe/PayPal, since those need a merchant account and API credentials this environment doesn't have. It follows the same test-card convention real sandboxes use (Stripe's own `4242...4242` approves, `4000...0002` always declines), so both the approve and decline paths are genuinely tested, not just a stub that always succeeds.
-- **PDF-to-audio (90)** uses Apache PDFBox for real text extraction, then shells out to Windows' built-in SAPI speech engine via PowerShell for text-to-speech (there's no actively-maintained, license-clean, cross-platform pure-Java TTS library) — genuinely Windows-only, documented as such rather than implied to be portable.
-- **The Cafe Finder (87) and API Integration dashboard (95)** deliberately picked free, keyless, live APIs (OpenStreetMap/Leaflet for maps; Open-Meteo, CoinGecko, and Open Notify's ISS endpoint for the dashboard) specifically so the integration could be tested for real against a live external service, without needing an API key this environment doesn't have.
-- Continues the same H2 reserved-word gotcha found in Days 60–69: Day 96's order entity is named `CustomerOrder`, not `Order`, since `ORDER` is reserved SQL.
-- **WhatsApp integration (97)** uses a `WhatsAppClient` interface with a simulated send implementation (a verified WhatsApp Business number and Meta API credentials aren't available here), but the *receiving* side is real: the webhook controller implements Meta's actual documented Cloud API contract (the `hub.challenge` verification handshake and the `entry[].changes[].value.messages[]` payload shape) and is tested against realistic webhook payloads, not simplified stand-ins.
-- **Day 99** uses PDFBox to *generate* a PDF report (`PDPageContentStream`/`showText`), the reverse direction from Day 90's PDF *text extraction* - the generated PDF is verified by re-parsing it with PDFBox's own text stripper and confirming the expected content is actually in there.
-- **Day 100**'s model is trained twice on purpose: once on an 80/20 seeded train/test split purely to report honest held-out R²/MSE/MAE, and separately on the full dataset for the model that actually serves predictions - so the reported accuracy numbers reflect genuinely unseen data, not the same rows the deployed model was fit on.
-
-**Honestly flagged, not faked:**
-- **Day 70**'s live Docker build/run was never verified — Docker Desktop's engine was unresponsive on this machine for hours even after a full restart. `mvn test` and `docker compose config` (a client-only, daemon-free command) were both verified for real; the live container path is disclosed as unverified rather than assumed to work.
-- **Day 66** deliberately skipped adding Swagger/OpenAPI due to a real compatibility risk with the very-new Spring Boot 4 at the time.
-- **Days 83, 86, 89, 94**'s JavaFX GUIs were verified by actually running `mvn javafx:run` and confirming via the OS process list that the app launched, stayed alive and responding, with no exceptions in stderr — a real runtime check, not just a successful compile. A pixel-level screenshot check wasn't possible in the session that built these, since computer-use screen access was declined; that gap is disclosed rather than implied to have been checked.
-- **Day 96**'s payment gateway is explicitly simulated, not a real Stripe/PayPal integration — see above.
-
-## Days 32–53's remaining exercises, and 41–42: waiting on a decision
-
-Days 35, 37, and 40's exercises are done (see above) — they're pure logic, same as everything before them. The rest of the 32–53 range, plus all of 41–42, fall into two groups that a "write a reference solution and test it" pass can't honestly cover without a decision first:
-
-- **Days 41–42 aren't Java problems.** Their brief is HTML/CSS (flexbox, grid, basic pages), but the stub is a `.java` file. There's a content mismatch here worth fixing at the source rather than forcing Java to stand in for markup.
-- **Everything else needs a real external system this repo doesn't have, and a live version can't be safely faked:**
-  - **Day 32** (email sending) would need to actually send email through a real SMTP account.
-  - **Days 33, 34, 36, 39, 45, 46** (API calls, OAuth, Spotify, weather/news APIs) need live network calls and real credentials.
-  - **Day 38** (databases/SQL) needs a database engine, not installed here.
-  - **Days 43, 44** (web scraping) need a real page to scrape.
-  - **Days 47–53** (Selenium browser automation: form filling, game playing, job-application bots, social-media posting/liking/following) need a real browser plus WebDriver, not installed here — and several of these describe automating real third-party sites and platforms, which is its own decision to make deliberately, not default into.
-
-The honest options for this group are: (a) install the real infrastructure (a JDBC-compatible database, Selenium plus a browser driver, real API credentials) and test against it for real, or (b) write each one against a fake/in-memory stand-in for the external part (a fake HTTP client, an in-memory table instead of a real database) so the logic is still genuinely tested, clearly labelled as a substitute. Either way, it's a bigger and more infrastructure-heavy piece of work than the rest of this list, and worth its own pass.
+- [ ] Day 1–14: Beginner
+- [ ] Day 15–31: Intermediate
+- [ ] Day 32–58: Intermediate+
+- [ ] Day 59–80: Advanced
+- [ ] Day 81–100: Professional
